--- a/src/app/holidays/list/list.component.html
+++ b/src/app/holidays/list/list.component.html
@@ -52,7 +52,7 @@
                       <div style="max-width:80%; width:80%">
                         <div class="flex sm:flex-col sm:my-2 md:flex-row flex-wrap break-all">
                            <span class="">From date:<span> {{day?.fromDate | date:'shortDate'}}</span></span>
-                          <span class="ml-3">To date:<span> {{day?.fromDate | date:'shortDate'}}</span></span>
+                          <span class="ml-3">To date:<span> {{day?.toDate | date:'shortDate'}}</span></span>
                         </div>
                         <div class="">
                           <span class=" text-md font-medium">{{day?.onThisDay | titlecase}}</span>
