--- a/src/app/layout/sidebarmenulist/sidebarmenulist.component.html
+++ b/src/app/layout/sidebarmenulist/sidebarmenulist.component.html
@@ -1,7 +1,7 @@
 
 <div class="side-nav-content"   [ngClass]="expand ? 'expand' : 'collapse'">
     <div class="logo">
-        <a href="/" class="logo-mini">
+        <a routerLink="/expertizzy/dashboard" class="logo-mini">
           <img src="assets/images/logo2.png" alt="logo of company"  *ngIf="expand"/> 
         </a>
     </div>
