--- a/src/app/financial-year/list/list.component.html
+++ b/src/app/financial-year/list/list.component.html
@@ -50,10 +50,27 @@
             </ng-container>
             <ng-container matColumnDef="status">
               <th mat-header-cell *matHeaderCellDef>Status</th>
-              <td mat-cell *matCellDef="let element" [style.color]="element?.status =='active' ? 'green' :'red' ">
-                {{ element?.status =='active' ? 'Active': 'In active'}}
+              <td mat-cell *matCellDef="let element" [style.color]="element?.status  ? 'green' :'red' ">
+                {{ element?.status ? 'Active': 'In active'}}
+                <mat-slide-toggle 
+                color="primary" 
+                [(ngModel)]="element.status"
+                (change)="upadateStatus(element)"
+              ></mat-slide-toggle>
               </td>
             </ng-container>
+
+            <!-- <ng-container matColumnDef="button">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let element">
+                <mat-slide-toggle 
+                color="primary" 
+                [(ngModel)]="element.status"
+                (change)="upadateStatus(element)"
+              ></mat-slide-toggle>
+              </td>
+            </ng-container> -->
+            
             <ng-container *ngIf="permissions?.manage || permissions?.delete || permissions?.update " matColumnDef="actions">
               <th mat-header-cell class="text-right"  *matHeaderCellDef>Actions</th>
               <td mat-cell *matCellDef="let element"  class="text-right mr-8">
