--- a/src/app/payroll/payments/payments.component.html
+++ b/src/app/payroll/payments/payments.component.html
@@ -4,7 +4,7 @@
 
     <div class="min-h-screen  bg-gray-100">
      
-      <div class="grid grid-cols-1 gap-5 sm:grid-cols-1 lg:grid-cols-2 mx-10">
+      <div class="grid grid-cols-1 gap-5 sm:grid-cols-1 lg:grid-cols-2 mx-10 mt-4">
         <mat-card class="example-card p-3 h-40 relative">
           <mat-card-content class="p-3">
             <div class="flex flex-col">
