--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -7,15 +7,15 @@
         src="{{element.profilePic.link}}" class="img-cell">
         <img *ngIf="!element?.profilePic" src="assets/images/profile.jpg" class="img-cell"></td>
     </ng-container>
-    <!-- <ng-container matColumnDef="empId">
+    <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> Emp Id. </th>
-      <td mat-cell *matCellDef="let element">{{element.empId}} </td>
-    </ng-container> -->
+      <td mat-cell *matCellDef="let element" style="letter-spacing: 1px;">{{element.empId}} </td>
+    </ng-container>
   
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element?.firstName | titlecase}}  {{element?.fatherName | titlecase}} {{element?.lastName | titlecase}} </td>
+      <td mat-cell *matCellDef="let element" style="letter-spacing: 0.5px;"> {{element?.firstName | titlecase}}  {{element?.fatherName | titlecase}} {{element?.lastName | titlecase}} </td>
     </ng-container>
   
     <!-- Weight Column -->
