--- a/src/app/holidays/list/list.component.html
+++ b/src/app/holidays/list/list.component.html
@@ -51,8 +51,8 @@
                     <div class="flex ">
                       <div style="max-width:80%; width:80%">
                         <div class="flex sm:flex-col sm:my-2 md:flex-row flex-wrap break-all">
-                           <span class="">From date:<span> {{day?.fromDate | date:'shortDate'}}</span></span>
-                          <span class="ml-3">To date:<span> {{day?.toDate | date:'shortDate'}}</span></span>
+                           <span class="">From date:<span> {{day?.fromDate | date: 'dd/MM/yyyy'}}</span></span>
+                          <span class="ml-3">To date:<span> {{day?.toDate | date: 'dd/MM/yyyy'}}</span></span>
                         </div>
                         <div class="">
                           <span class=" text-md font-medium">{{day?.onThisDay | titlecase}}</span>
